bug: Fix alignment of items in white box 1

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ h1 {
     width: 43%;
     padding: 10px;
     margin: auto;
-    margin-bottom: 100px;;
+    margin-bottom: 100px;
+    min-width: 474px;
 }
 .white-box2 {
     width: 62%;
@@ -39,6 +40,7 @@ input {
 body {
     background: linear-gradient(#134d71, #78a7c6, #f7e4bf);
     height: 100vh;
+    margin: 0;
     padding-top: 1px;
 }
 
@@ -78,4 +80,12 @@ button {
 h2 {
     margin-bottom: 5px;
     margin-top: 70px;
+}
+
+.message-pop-up {
+
+}
+
+.hidden {
+    display: none;
 }
